assets/css/style.css
/* remove default broweser settings */

* {
    border: none;
    margin: 0;
    padding: 0;
    color: silver;
}

body {
    background-color: rgb(58, 56, 56);

}

.container {
    max-width: 1200px;
    margin: 0 auto;
}

header {
    margin: 25px 10px 75px 10px;
}

header h1 {
    font-size: 300%;
    float: left;
    display: block;
    margin-left: 30px
}

/* hero image style */

#hero-holder {
    width: 100%;
    height: 300px;
    background: url(../images/night-sky.jpg) no-repeat center center;
    background-size: cover;
}

i:hover {
    color: red;
}

/* navigation styling */

#nav-list {
    font-size: 25px;
}

#nav-list > li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

#nav-list a {
    text-decoration: none;
    color: inherit;
}

#nav-list a:hover {
    border-color: rgb(58, 56, 56);
    border: 1px solid;
}

#nav-list li, header h1 {
    line-height: 75px;
}

/* section general */

section {
    height: 900px;
    margin: 10px 10px 5px 10px;
    background-color: #3c3c3c;
    border: 1px solid rgb(76 76 76);
    border-radius: 1%;
    text-align: center;
    overflow: hidden;
}

/* about style */

h2 {
    font-size: 190%;
    margin: 10px;
    text-align: center;
}

#about-sec > div {
    padding: 5px;
    width: 100%;
    height: 85%;
    text-align: center;
    font-size: 120%;
    box-sizing: border-box;
}

#about-left-img, #about-right-text {
    width: 50%;
    height: 100%;
}

#about-left-img {
    float: left;
    background: url(../images/fairing-release.webp) no-repeat center center;
    background-size: cover;
}

#about-right-text {
    float: right;
}

#about-right-text p {
    margin: 20px;
}

/* timeline style */

#timeline-img {
    width: 100%;
    height: 90%;
    background: url(../images/james-web-timeline.jpeg) no-repeat center center;
    background-size: contain;
    margin: 10px;
}

#timeline-sec p {
    font-size: 120%;
}

/* first images style */

#first-images-sec > div {
    width: 100%;
    height: 100%;
    text-align: center;
    box-sizing: border-box;
}

#first-images-one-div, #first-images-two-div {
    width: 100%;
    height: 48%;
    box-sizing: border-box;
}

#first-image-one, #first-image-two {
    width: 100%;
    height: 90%;
}

#first-image-one {
    background: url(../images/first-image1.png) no-repeat center center;
    background-size: contain;
}

#first-image-two {
    background: url(../images/first-image2.jpg) no-repeat center center;
    background-size: contain;
}

/* signup form style */

#signup-form-sec {
    height: 300px;
    background: url(../images/night-sky.jpg) no-repeat center bottom;
}

#form label, #signup-form-sec h2  {
    color: white;
}

.form-input {
    border: 2px solid #3c3c3c;
    border-radius: 2px;
    font-size: 150%;
    background-color: #3c3c3c;
}

.form-input:hover {
    border-color: red;
}

#form-submit {
    text-align: center;
    font-size: 130%;
    background-color: #3c3c3c;
    display: block;
    color: white;
    padding: 5px;
    margin-top: 20px;
    margin-left: 45%;
}

#form-submit:hover {
    color: #3c3c3c;
    background-color: white;
}


/* footer style */

footer {
    height: 150px;
    margin: 10px 10px 5px 10px;
    background-color: #3c3c3c;
    border: 1px solid rgb(76 76 76);
    border-radius: 1%;
    text-align: center;
    overflow: hidden;
}

footer li {
    margin-top: 10px;
    display: inline-block;
    list-style-type: none;
    margin-right: 30px;
    box-sizing: border-box;
}

footer a {
    font-size: 35px;
    padding: 10px;
    margin: 10px;
}

footer i:hover {
    font-size: 45px;
    color: red;
}

@media screen and (max-width: 1200px) {

    #nav-list {
        float: left;
        clear: left;
        margin-left: 30px;
        margin-bottom: 20px;

    }

    #nav-list li, header h1 {
        line-height: 25px;
    }

    section, footer {
        width: 100%;
        height: 1200px;
        margin: 10px 10px 10px 10px;
    }

    footer {
        height: 150px;
    }

    #about-left-img, #about-right-text {
        float: left;
        width: 100%;
        height: 50%;
        padding: 0;
    }

    #first-images-one-div, #first-images-two-div {
        float: left;
        width: 100%;
        height: 50%;
        box-sizing: border-box;
    }

    #form label {
        display: block;
    }
    

}

@media screen and (max-width: 720px) {

    #nav-list {
        float: left;
        clear: left;
        margin-left: 30px;
        margin-bottom: 50px;
    }

    #nav-list li, header h1 {
        line-height: 30px;
        font-size: 20px;
    }

    section, footer {
        width: 100%;
        height: 1200px;
        margin: 10px 10px 10px 10px;
    }

    footer {
        height: 200px;
    }

}

